--- a/pagina_iniziale.html
+++ b/pagina_iniziale.html
@@ -23,7 +23,7 @@
     
     <!-- Prima sezione con l'immagine -->
     <div class="content">
-        <img src="immagini/pginit.png" alt="Persone in montagna">
+        <img src="https://i.pinimg.com/736x/c3/0d/01/c30d0181617661c19186220eedac9938.jpg" alt="Persone in montagna">
         <div class="overlay">
             <h1 class="title" >Wl</h1>
             <p class="text">Non rimandare: il viaggio perfetto non ti aspetta.</p>
