--- a/pagina_iniziale.html
+++ b/pagina_iniziale.html
@@ -27,7 +27,7 @@
         <div class="overlay">
             <h1 class="title" >Wl</h1>
             <p class="text">Non rimandare: il viaggio perfetto non ti aspetta.</p>
-            <button>Accedi</button>
+            <a href="login.html"><button>Accedi</button></a>
         </div>
     </div>
 
