--- a/login.html
+++ b/login.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="immagini/ex.png"  type="image/png">
 </head>
 <body>
-    <h2>Benvenuto  </h2>
+    <h2>Benvenuto  puzza</h2>
 
     <!-- Form di Login -->
     <div id="login-form">
