--- a/login.html
+++ b/login.html
@@ -12,7 +12,7 @@
 
     <!-- Form di Login -->
     <div id="login-form">
-        <h3>Login!!</h3>
+        <h3>Login</h3>
         <input type="email" id="login-email" placeholder="Email">
         <input type="password" id="login-password" placeholder="Password">
         <button onclick="login()">Accedi</button>
@@ -20,7 +20,7 @@
 
     <!-- Form di Registrazione -->
     <div id="form-registrazione">
-        <h3>Registrati</h3>
+        <h3>Sign in</h3>
         <input type="text" id="reg-name" placeholder="Nome">
         <input type="email" id="reg-email" placeholder="Email">
         <input type="password" id="reg-password" placeholder="Password">
