--- a/login.html
+++ b/login.html
@@ -6,6 +6,7 @@
     <title>wanderlust-login</title>
     <link rel="stylesheet" href="css/style_login.css">
     <link rel="icon" href="immagini/ex.png"  type="image/png">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <h2>Benvenuto in Wanderlust!</h2>
