bottone per login

--- a/login.html
+++ b/login.html
@@ -28,6 +28,6 @@
         <button onclick="register()">Registrati</button>
     </div>
 
-    <script src="js/script.js"></script>
+    <script src="js/login.js"></script>
 </body>
 </html>
