--- a/login.html
+++ b/login.html
@@ -3,25 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!--per adattare la pagina-->
-    <title>wanderlust-login</title>
+    <title>Wanderlust - Login</title>
     <link rel="stylesheet" href="css/style_login.css">
     <link rel="icon" href="immagini/ex.png"  type="image/png">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="icon" href="immagini/ex.png" type="image/png">
 </head>
 <body>
     <h2>Benvenuto in Wanderlust!</h2>
 
     <!-- Form di Login -->
-    <div id="login-form">
+    <div class="form-container" id="login-form">
         <h3>Login</h3>
+        <div class="error-message" id="login-error"></div>
         <input type="email" id="login-email" placeholder="Email">
         <input type="password" id="login-password" placeholder="Password">
         <button onclick="login()">Accedi</button>
     </div>
 
     <!-- Form di Registrazione -->
-    <div id="form-registrazione">
+    <div class="form-container" id="form-registrazione">
         <h3>Sign in</h3>
+        <div class="error-message" id="register-error"></div>
         <input type="text" id="reg-name" placeholder="Nome">
         <input type="email" id="reg-email" placeholder="Email">
         <input type="password" id="reg-password" placeholder="Password">
