--- a/login.html
+++ b/login.html
@@ -16,6 +16,7 @@
     <div class="form-container" id="login-form">
         <h3>Login</h3>
         <div class="error-message" id="login-error"></div>
+        <div id="login-success" class="success-message"></div>
         <input type="email" id="login-email" placeholder="Email">
         <input type="password" id="login-password" placeholder="Password">
         <button onclick="login()">Accedi</button>
@@ -25,6 +26,7 @@
     <div class="form-container" id="form-registrazione">
         <h3>Sign in</h3>
         <div class="error-message" id="register-error"></div>
+        <div id="register-success" class="success-message"></div>
         <input type="text" id="reg-name" placeholder="Nome">
         <input type="email" id="reg-email" placeholder="Email">
         <input type="password" id="reg-password" placeholder="Password">
