separazione tra login e register

--- a/login.html
+++ b/login.html
@@ -20,18 +20,14 @@
         <input type="email" id="login-email" placeholder="Email">
         <input type="password" id="login-password" placeholder="Password">
         <button onclick="login()">Accedi</button>
+
+        <p class="link-registrazione">
+            Non sei registrato? 
+            <a href="register.html">Registrati qui</a>
+        </p>
     </div>
 
-    <!-- Form di Registrazione -->
-    <div class="form-container" id="form-registrazione">
-        <h3>Sign in</h3>
-        <div class="error-message" id="register-error"></div>
-        <div id="register-success" class="success-message"></div>
-        <input type="text" id="reg-name" placeholder="Nome">
-        <input type="email" id="reg-email" placeholder="Email">
-        <input type="password" id="reg-password" placeholder="Password">
-        <button onclick="register()">Registrati</button>
-    </div>
+   
 
     <script src="js/login.js"></script>
 </body>
