--- a/pagina_iniziale.html
+++ b/pagina_iniziale.html
@@ -63,15 +63,11 @@
 
         <div class="spiegazione_app">
 
-            <h4>Esplora, Condividi e  Connettiti<br>La nostra app è il punto d’incontro perfetto per chi ama viaggiare,                      
+            <h4>Esplora, Condividi e  Connettiti<br><br>La nostra app è il punto d’incontro perfetto per chi ama viaggiare,                      
                 scoprire nuovi posti e connettersi con persone che condividono la
-                stessa passione.<br> Grazie a un’interfaccia intuitiva e coinvolgente, puoi:
-                 Condividere i tuoi momenti di viaggio attraverso foto e racconti ispiratori.
-                <br>  Trovare nuovi compagni di avventura, ovunque ti trovi.
-                 Scoprire esperienze uniche, consigliate da chi ha già vissuto quelle emozioni.
-                Coltivare la tua carriera in viaggio, con networking e opportunità professionali.
-                <br>Che tu stia cercando un’avventura , nuove amicizie o opportunità di crescita,
-                 la nostra app ti aiuta a vivere ogni viaggio al massimo. 
+                stessa passione.<br><br>
+                 Condividi i tuoi momenti di viaggio attraverso foto e racconti ispiratori e  trova nuovi compagni di avventura, ovunque ti trovi.
+                 <br>La nostra app ti aiuta a vivere ogni viaggio al massimo. <br>
                 <br>Unisciti a noi e trasforma ogni esperienza in un ricordo indimenticabile!</h4>
         </div>
         <div class="qrcode">
