--- a/pagina_iniziale.html
+++ b/pagina_iniziale.html
@@ -11,7 +11,7 @@
             src: url('font/8e78142e2f114c02b6e1daaaf3419b2e.woff2') format('woff2');
             font-display: swap;
         }
-        h1, p{
+        h1{
             font-family: 'CustomFont', sans-seri;
             color: #0056b3;
         }
@@ -58,22 +58,28 @@
         </div>   
     </div>
     <div class="contenitore_descrizione">
-        
-        
-
         <div class="spiegazione_app">
-
-            <h4>Esplora, Condividi e  Connettiti<br><br>La nostra app è il punto d’incontro perfetto per chi ama viaggiare,                      
-                scoprire nuovi posti e connettersi con persone che condividono la
-                stessa passione.<br><br>
-                 Condividi i tuoi momenti di viaggio attraverso foto e racconti ispiratori e  trova nuovi compagni di avventura, ovunque ti trovi.
-                 <br>La nostra app ti aiuta a vivere ogni viaggio al massimo. <br>
-                <br>Unisciti a noi e trasforma ogni esperienza in un ricordo indimenticabile!</h4>
+            <h3>Esplora, Condividi e Connettiti!</h3>
+            <p><br><br>
+                La nostra app è il punto d’incontro perfetto per chi ama viaggiare, 
+                scoprire nuovi posti e connettersi con persone che condividono la stessa passione.
+            </p><br>
+            <p>
+                Condividi i tuoi momenti di viaggio attraverso foto e racconti ispiratori 
+                e trova nuovi compagni di avventura, ovunque ti trovi.
+            </p><br>
+            <p>
+                La nostra app ti aiuta a vivere ogni viaggio al massimo.
+            </p><br>
+            <p>
+                Unisciti a noi e trasforma ogni esperienza in un ricordo indimenticabile!
+            </p><br>
         </div>
         <div class="qrcode">
             <img src="qrcode.png" alt="QR Code per scaricare l'app">
             <div class="scarica"><strong>Scarica l'app!!</strong></div>
         </div>
+    </div>
 </div>
     <script>
         setTimeout(() => {
