--- a/pagina_iniziale.html
+++ b/pagina_iniziale.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wanderlust</title>
+    <link rel="icon" type="image/x-icon" href="immagini/Screenshot_2025-03-21_alle_14.54.18-removebg-preview.ico" >
     <link rel="stylesheet" href="css/style_pagina_iniziale.css">
     <style>
         @font-face {
@@ -12,7 +13,7 @@
             font-display: swap;
         }
         h1{
-            font-family: 'CustomFont', sans-seri;
+            font-family: 'CustomFont';
             color: #0056b3;
         }
     </style>
