--- a/profilo.html
+++ b/profilo.html
@@ -147,7 +147,7 @@
     </div>
     
     <div class="photo-gallery">
-        <h3>I miei viaggi</h3>
+        <h3>I miei viaggi!</h3>
         <div class="photos">
             <img src="foto1.jpg" alt="Viaggio 1">
             <img src="foto2.jpg" alt="Viaggio 2">
