--- a/pagina_iniziale.html
+++ b/pagina_iniziale.html
@@ -70,7 +70,7 @@
                 e trova nuovi compagni di avventura, ovunque ti trovi.
             </p><br>
             <p>
-                La nostra app ti aiuta a vivere ogni viaggio al massimo.
+                Vivi ogni viaggio al massimo.
             </p><br>
             <p>
                 Unisciti a noi e trasforma ogni esperienza in un ricordo indimenticabile!
