--- a/login.html
+++ b/login.html
@@ -40,17 +40,17 @@
       <!-- Sezione di login alternativo -->
       <div class="alt-login">
         <div class="social-btn" onclick="loginWithFacebook()">
-          <img src="immagini/fb-icon.png" alt="Facebook Icon">
+          <img src="immagini/facebook.png" alt="Facebook Icon">
           <span>Accedi con Facebook</span>
         </div>
 
         <div class="social-btn" onclick="loginWithGoogle()">
-          <img src="immagini/google-icon.png" alt="Google Icon">
+          <img src="immagini/google.png" alt="Google Icon">
           <span>Accedi con Google</span>
         </div>
 
         <div class="social-btn" onclick="loginWithApple()">
-          <img src="immagini/apple-icon.png" alt="Apple Icon">
+          <img src="immagini/apple.png" alt="Apple Icon">
           <span>Accedi con Apple</span>
         </div>
       </div>
@@ -63,6 +63,11 @@
       <a href="register.html">Registrati qui</a>
     </p>
   </div>
+
+  <!-- Esempio di link in un paragrafo -->
+  <p class="forgot-link">
+    <a href="password.html">Password dimenticata?</a>
+  </p>
 
   <!-- File JS per il login -->
   <script src="js/login.js"></script>
