--- a/register.html
+++ b/register.html
@@ -16,6 +16,7 @@
     <div class="error-message" id="register-error"></div>
     <div class="success-message" id="register-success"></div>
     <input type="text" id="reg-name" placeholder="Nome">
+    <input type="text" id="reg-id" placeholder="Nome utente">
     <input type="email" id="reg-email" placeholder="Email">
     <input type="password" id="reg-password" placeholder="Password">
     <button onclick="register()">Registrati</button>
