--- a/register.html
+++ b/register.html
@@ -1,32 +1,49 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Wanderlust - Registrazione</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Registrazione - Wanderlust</title>
   <link rel="stylesheet" href="css/style_register.css">
-  <link rel="icon" href="immagini/ex.png" type="image/png">
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
   <h2>Registrati in Wanderlust!</h2>
-
-  <div class="form-container" id="form-registrazione">
-    <h3>Sign in</h3>
-    <div class="error-message" id="register-error"></div>
-    <div class="success-message" id="register-success"></div>
-    <input type="text" id="reg-name" placeholder="Nome">
-    <input type="text" id="reg-id" placeholder="Nome utente">
-    <input type="email" id="reg-email" placeholder="Email">
-    <input type="password" id="reg-password" placeholder="Password">
-    <button onclick="register()">Registrati</button>
-
+  <form id="register-form">
+    <div class="form-container">
+      <h3>Sign in</h3>
+      <input type="text" name="name" placeholder="Nome" required />
+      <input type="text" name="username" placeholder="Nickname" required />
+      <input type="email" name="email" placeholder="Email" required />
+      <input type="password" name="password" placeholder="Password" required />
+      <button type="submit">Registrati</button>
+    </div>
     <p class="link-registrazione">
       Sei già registrato?
-      <a href="login.html">Accedi qui</a>
+      <a href="login.html"> Accedi qui</a>
     </p>
-  </div>
+  </form>
 
-  <script src="js/register.js"></script>
+  <div class="modal" id="modal-message"></div>
+
+  <script>
+    document.getElementById('register-form').addEventListener('submit', async function(e) {
+      e.preventDefault();
+
+      const formData = new FormData(this);
+
+      const res = await fetch('register.php', {
+        method: 'POST',
+        body: formData
+      });
+
+      const text = await res.text();
+      const modal = document.getElementById('modal-message');
+      modal.innerHTML = text;
+      modal.classList.add('show');
+
+      // Chiude la modale dopo 3 secondi
+      setTimeout(() => modal.classList.remove('show'), 3000);
+    });
+  </script>
 </body>
 </html>
