--- a/intro.html
+++ b/intro.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Wanderlust - Landing Page</title>
   <link rel="stylesheet" href="css/style_intro.css">
-  <!-- Includi il font se lo desideri -->
+  
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
   <script>
     // Oggetto contenente i testi nelle lingue supportate (italiano ed inglese, per esempio)
@@ -50,7 +50,7 @@
 </head>
 <body>
   <header class="top-bar">
-    <!-- Puoi aggiungere qui il logo se desideri -->
+    
     <div class="brand">Wanderlust</div>
     <!-- Selettore di lingua -->
     <select id="language-select" onchange="changeLanguage()">
@@ -71,7 +71,10 @@
   </section>
 
   <footer>
-    <!-- Puoi inserire link informativi o social se vuoi -->
+    <p>&copy; 2025 Wanderlust. Tutti i diritti riservati.</p>
+    <p>Realizzato da Benvenuto Ida, Desideri Alessia</p>
+   <!---- <p><a href="privacy_policy.html">Privacy Policy</a></p>
+    <p><a href="terms_of_service.html">Termini di Servizio</a></p>---->
   </footer>
 </body>
 </html>
