--- a/intro.html
+++ b/intro.html
@@ -2,79 +2,70 @@
 <html lang="it">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Wanderlust - Landing Page</title>
+  <title>Wanderlust Landing</title>
   <link rel="stylesheet" href="css/style_intro.css">
-  
+  <!-- Font se desideri, es. Playfair Display -->
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
-  <script>
-    // Oggetto contenente i testi nelle lingue supportate (italiano ed inglese, per esempio)
-    const texts = {
-      it: {
-        heading: "Scopri il mondo con Wanderlust",
-        subtitle: "Connetti con viaggiatori che condividono i tuoi interessi e crea esperienze indimenticabili insieme a loro. Esplora,connetti e viaggia sicuramente.",
-        getStarted: "Iniziamo!",  // Puoi decidere se tradurlo in Italiano oppure mantenerlo in Inglese come brand.
-        learnMore: "Scopri di più"
-      },
-      en: {
-        heading: "Discover the world with Wanderlust",
-        subtitle: "Connect with travelers who share your interests and create unforgettable experiences together.Explore,connect,and travel with confidence",
-        getStarted: "Get Started",
-        learnMore: "Learn More"
-      }
-    };
-
-    // Imposta la lingua corrente; ad esempio predefinita 'it'
-    let currentLang = 'it';
-
-    // Funzione per applicare i testi nella lingua selezionata
-    function updateLanguage() {
-      document.getElementById("hero-heading").textContent = texts[currentLang].heading;
-      document.getElementById("hero-subtitle").textContent = texts[currentLang].subtitle;
-      document.getElementById("btn-get-started").textContent = texts[currentLang].getStarted;
-      document.getElementById("btn-learn-more").textContent = texts[currentLang].learnMore;
-    }
-
-    // Funzione per cambiare lingua quando selezionata dal menu a tendina
-    function changeLanguage() {
-      const select = document.getElementById("language-select");
-      currentLang = select.value;
-      updateLanguage();
-    }
-
-    // Aggiorna i testi al caricamento della pagina
-    window.addEventListener("DOMContentLoaded", () => {
-      updateLanguage();
-    });
-  </script>
 </head>
 <body>
+
   <header class="top-bar">
-    
     <div class="brand">Wanderlust</div>
-    <!-- Selettore di lingua -->
-    <select id="language-select" onchange="changeLanguage()">
-      <option value="it">Italiano</option>
-      <option value="en">English</option>
-    </select>
+    <nav class="top-nav">
+      <!-- Indicatore lingua: icona + testo "Lingua" -->
+      <div class="language-indicator" onclick="toggleLanguageMenu()">
+        <img src="immagini/icon-language.png" alt="Language Icon" class="lang-icon" />
+        <span class="lang-text">Lingua</span>
+      </div>
+      <!-- Dropdown con le opzioni di lingua -->
+      <div class="lang-menu" id="lang-menu">
+        <div onclick="setLanguage('it')">Italiano</div>
+        <div onclick="setLanguage('en')">English</div>
+        <!-- Aggiungi altre lingue se serve -->
+      </div>
+
+      <!-- Pulsante Accedi -->
+      <button class="btn-accedi">Accedi</button>
+    </nav>
   </header>
 
   <section class="hero">
-    <h1 id="hero-heading"></h1>
-    <p id="hero-subtitle"></p>
+    <h1 id="hero-heading">Scopri il mondo con Wanderlust</h1>
+    <p id="hero-subtitle">
+      Connetti con viaggiatori che condividono i tuoi interessi 
+      e crea esperienze indimenticabili insieme.
+    </p>
     <div class="buttons">
-      <!-- Get Started reindirizza a register.html -->
-      <button id="btn-get-started" onclick="location.href='register.html'"></button>
-      <!-- Learn More reindirizza a paginainiziale.html -->
-      <button id="btn-learn-more" onclick="location.href='pagina_iniziale.html'"></button>
+      <button id="btn-get-started" onclick="location.href='register.html'">Iniziamo!</button>
+      <button id="btn-learn-more" onclick="location.href='pagina_iniziale.html'">Scopri di più</button>
     </div>
   </section>
 
-  <footer>
-    <p>&copy; 2025 Wanderlust. Tutti i diritti riservati.</p>
-    <p>Realizzato da Benvenuto Ida, Desideri Alessia</p>
-   <!---- <p><a href="privacy_policy.html">Privacy Policy</a></p>
-    <p><a href="terms_of_service.html">Termini di Servizio</a></p>---->
-  </footer>
+  <!-- Script JS -->
+  <script>
+    // Mostra / nasconde il menu di selezione lingua
+    function toggleLanguageMenu() {
+      const menu = document.getElementById('lang-menu');
+      menu.classList.toggle('show');
+    }
+
+    // Esempio di funzione per cambiare la lingua
+    function setLanguage(lang) {
+      alert("Hai selezionato la lingua: " + lang);
+      // Qui potresti richiamare updateLanguage() oppure ricaricare la pagina...
+      // toggleLanguageMenu() per chiudere il menu dopo il click
+      toggleLanguageMenu();
+    }
+
+    // Chiudi il menu se clicchi fuori
+    document.addEventListener("click", (e) => {
+      const langMenu = document.getElementById('lang-menu');
+      const indicator = document.querySelector('.language-indicator');
+      // Se il target del click non è nel menu e non è l'indicatore, chiudi il menu
+      if (!langMenu.contains(e.target) && !indicator.contains(e.target)) {
+        langMenu.classList.remove('show');
+      }
+    });
+  </script>
 </body>
 </html>
