--- a/intro.html
+++ b/intro.html
@@ -14,7 +14,7 @@
     <nav class="top-nav">
       <!-- Indicatore lingua: icona + testo "Lingua" -->
       <div class="language-indicator" onclick="toggleLanguageMenu()">
-        <img src="immagini/icon-language.png" alt="Language Icon" class="lang-icon" />
+        <img src="immagini/language-solid.svg" alt="Language Icon" class="lang-icon" />
         <span class="lang-text">Lingua</span>
       </div>
       <!-- Dropdown con le opzioni di lingua -->
