--- a/pagina_iniziale.html
+++ b/pagina_iniziale.html
@@ -60,6 +60,7 @@
     </div>
     <div class="contenitore_step">
         <h2>Come Funziona</h2>
+            <div class="description">Connettersi con altri viaggiatori non è mai stato così semplice!</div>
 
         <div class="step">
           <div class="circle">1</div>
