--- a/creaprofilo.html
+++ b/creaprofilo.html
@@ -12,9 +12,10 @@
      Lingua
     </button>
    </div>
+  
    <div class="max-w-4xl mx-auto">
     <h1 class="text-3xl font-bold mb-6">
-     Crea account
+     Modifica account
     </h1>
     <div class="flex flex-col md:flex-row">
      <div class="w-full md:w-1/2 md:pr-4">
@@ -40,19 +41,7 @@
         <input class="w-1/3 bg-gray-800 text-white border border-gray-700 rounded p-2" placeholder="Year" type="text" value="2003"/>
        </div>
       </div>
-      <div class="mb-4">
-       <label class="block text-sm font-medium mb-2">
-        Sesso
-        <i class="fas fa-info-circle text-blue-500">
-        </i>
-       </label>
-       <button class="w-full bg-gray-800 text-white border border-gray-700 rounded p-2 mb-2">
-        Modifica il tuo genere
-       </button>
-       <button class="w-full bg-gray-800 text-white border border-red-500 rounded p-2">
-        Oltre il binarismo di genere
-       </button>
-      </div>
+      
       <div class="mb-4">
        <label class="block text-sm font-medium mb-2">
         Mi interessano:
@@ -61,18 +50,15 @@
        </label>
        <div class="flex space-x-2">
         <button class="w-1/3 bg-gray-800 text-white border border-gray-700 rounded p-2">
-         Uomini
+         viaggi singoli
         </button>
         <button class="w-1/3 bg-gray-800 text-white border border-gray-700 rounded p-2">
-         Donne
+         viaggi in coppia
         </button>
         <button class="w-1/3 bg-gray-800 text-white border border-red-500 rounded p-2">
-         Oltre il binarismo di genere
+         viaggi di gruppo
         </button>
        </div>
-       <button class="w-full bg-gray-800 text-white border border-red-500 rounded p-2 mt-2">
-        Tutti
-       </button>
       </div>
       <div class="mb-4">
        <label class="block text-sm font-medium mb-2">
@@ -80,9 +66,6 @@
        </label>
        <button class="w-full bg-gray-800 text-white border border-gray-700 rounded p-2 mb-2">
         Modifica la sezione "Qui per..."
-       </button>
-       <button class="w-full bg-gray-800 text-white border border-red-500 rounded p-2">
-        Niente di serio
        </button>
       </div>
      </div>
